# yondr

./: .gitignore  Cargo.toml  README.md  yondr.sln
DUMP/: Lua.cs  yondr.xml
client/: Client.cs  Controls.cs  Display.cs  Game.cs  Renderer.cs  client.csproj  packages.config
client/Graphics/: GMesh.cs  Renderer.cs  Shader.cs  TestRenderer.cs  Texture.cs  Util.cs
data/: sandbox.lua
gamedata/core/: frag.frag  frag2.frag  vert.vert  vert2.vert
gamedata/space/: _box.ym  _properties.cs  _space.csproj  box.dae  controls.yaml  events.cs  world.yaml
gamedata/testdependency/: world.yaml
gamedata/testpackage/: deps.yaml  events.cs  items.yaml  readme.txt  stuff0.json  world.yaml
script-context/: IContext.cs  IndexWrappers.cs  script-context.csproj  script-context.snk
script-context/Properties/: AssemblyInfo.cs
script-helper/: ScriptHelper.cs  script-helper.csproj  script-helper.snk
script-helper/Properties/: AssemblyInfo.cs
server/: Server.cs  packages.config  server.csproj
src/: client_main.rs  server_main.rs
src/client/: mod.rs
src/logger/: mod.rs
src/name/: mod.rs
src/network_shared/: mod.rs
src/old/: vec.rs
src/property_system/: mod.rs  (+2 more)
test/: MeshTest.cs  PropertySystemTest.cs  SpacialComponentTest.cs  YamlTest.cs  mesh.dae  test.csproj
util/: EntityIdx.cs  StringUtil.cs  Vec.cs  util.csproj  util.snk
yondr/: Entity.cs  IControls.cs  IRenderer.cs  Log.cs  Net.cs  PropertySystem.cs  RendererI.cs  ScriptContext.cs  ScriptManager.cs  SerializableDictionary.cs  StringUtil.cs  Val.cs  Vec.cs  Yaml.cs  packages.config  yondr.csproj  yondr.snk
(+64 files in other folders)
